--- a/dashboard.html
+++ b/dashboard.html
@@ -12,24 +12,27 @@
     <button onclick="logout()">تسجيل الخروج</button>
 
     <div class="container">
-      <!-- قائمة العملاء -->
+      <!-- العملاء -->
       <div class="clients-section">
         <h3>العملاء</h3>
-        <div id="clientsList"></div>
-
-        <h4>إضافة عميل</h4>
-        <input type="text" id="clientName" placeholder="اسم العميل">
-        <button onclick="addClient()">إضافة</button>
-
-        <h4>حذف العميل المحدد</h4>
-        <button onclick="deleteClient()">حذف العميل</button>
+        <table>
+          <thead>
+            <tr><th>الاسم</th></tr>
+          </thead>
+          <tbody id="clientsTable"></tbody>
+        </table>
+        <div class="client-actions">
+          <input type="text" id="clientName" placeholder="اسم العميل">
+          <button onclick="addClient()">إضافة عميل</button>
+          <button onclick="deleteClient()">حذف العميل المحدد</button>
+        </div>
       </div>
 
       <!-- تفاصيل العميل -->
       <div class="debts-section">
         <h3 id="clientTitle">تفاصيل العميل</h3>
         <div id="debtsSection">
-          <p>اختر عميل من القائمة لعرض التفاصيل</p>
+          <p>اختر عميل من الجدول لعرض التفاصيل</p>
         </div>
       </div>
     </div>
