--- a/dashboard.html
+++ b/dashboard.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>لوحة التحكم - كافيه الأجل</title>
+  <title>لوحة التحكم</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="dashboard">
     <h2>لوحة التحكم</h2>
     <button onclick="logout()">تسجيل الخروج</button>
-
     <div class="container">
       <!-- العملاء -->
       <div class="clients-section">
@@ -27,7 +26,6 @@
           <button onclick="deleteClient()">حذف العميل المحدد</button>
         </div>
       </div>
-
       <!-- تفاصيل العميل -->
       <div class="debts-section">
         <h3 id="clientTitle">تفاصيل العميل</h3>
@@ -37,9 +35,8 @@
       </div>
     </div>
   </div>
-
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
