--- a/dashboard.html
+++ b/dashboard.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>لوحة التحكم</title>
+  <title>لوحة العملاء</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="dashboard">
-    <h2>لوحة التحكم</h2>
+    <h2>لوحة العملاء</h2>
     <button onclick="logout()">تسجيل الخروج</button>
     <div class="container">
       <!-- العملاء -->
