--- a/staff.html
+++ b/staff.html
@@ -1,42 +1,113 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>لوحة الموظفين</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="dashboard">
-    <h2>لوحة الموظفين</h2>
-    <button onclick="logout()">تسجيل الخروج</button>
-    <div class="container">
-      <!-- تفاصيل الموظف -->
-      <div class="debts-section">
-        <h3 id="clientTitle">تفاصيل الموظف</h3>
-        <div id="debtsSection">
-          <p>اختر موظف من الجدول لعرض التفاصيل</p>
-        </div>
-      </div>
-      <!-- الموظفين -->
-      <div class="clients-section">
-        <h3>الموظفين</h3>
-        <table>
-          <thead>
-            <tr><th>الاسم</th></tr>
-          </thead>
-          <tbody id="clientsTable"></tbody>
-        </table>
-        <div class="client-actions">
-          <input type="text" id="clientName" placeholder="اسم الموظف">
-          <button onclick="addClient()">إضافة موظف</button>
-          <button onclick="deleteClient()">حذف الموظف المحدد</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <script src="app.js"></script>
-</body>
-</html>
+body {
+  font-family: "Cairo", Arial, sans-serif;
+  background: url('a7med.jpg') no-repeat center center fixed;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  direction: rtl;
+  color: #000;
+  font-size: 18px;
+}
+
+.login-container, .dashboard {
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(10px);
+  max-width: 400px;
+  margin: 100px auto;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  color: #000;
+}
+
+.dashboard {
+  max-width: 95%;
+  margin: 20px auto;
+  padding: 20px;
+}
+
+.container {
+  display: flex;
+  gap: 20px;
+  flex-direction: row-reverse; /* عكس القوائم */
+}
+
+.clients-section, .debts-section {
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(10px);
+  padding: 15px;
+  border-radius: 10px;
+  color: #000;
+}
+
+.clients-section { width: 30%; }
+.debts-section { width: 70%; }
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+  color: #000;
+}
+table th, table td {
+  padding: 8px;
+  text-align: center;
+  border-bottom: 1px solid rgba(0,0,0,0.3);
+}
+tr.selected { background: rgba(0,0,0,0.1); }
+
+input, button {
+  padding: 8px;
+  margin: 5px 0;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  color: #000;
+}
+
+button {
+  background: #007BFF;
+  color: white;
+  cursor: pointer;
+}
+button:hover { background: #0056b3; }
+
+/* أزرار تعديل/حذف */
+.edit-btn {
+  background: #ffc107;
+  color: black;
+  border: none;
+  padding: 5px 8px;
+  margin: 2px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.delete-btn {
+  background: #dc3545;
+  color: white;
+  border: none;
+  padding: 5px 8px;
+  margin: 2px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.edit-btn:hover { background: #e0a800; }
+.delete-btn:hover { background: #c82333; }
+
+/* مودال كلمة المرور */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.5);
+}
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  margin: 15% auto;
+  width: 300px;
+  border-radius: 10px;
+  text-align: center;
+}
