--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <input type="text" id="username" placeholder="اسم المستخدم">
     <input type="password" id="password" placeholder="كلمة المرور">
     <p>اختر نوع الإدارة:</p>
-    <button onclick="simpleLogin('clients')">إدارة العملاء</button>
-    <button onclick="simpleLogin('staff')">إدارة الموظفين</button>
+    <button onclick="simpleLogin('clients')">Clients</button>
+    <button onclick="simpleLogin('staff')">staff</button>
     <p id="error-message"></p>
   </div>
   <script src="app.js"></script>
