--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="login-container">
     <h2>تسجيل الدخول</h2>
+    <h2>تم تحديث الموقع فيجب حفظ البيانات  وسيتم قفل الموقع هذا والتسجيل الي الجديد يوم 5/11</h2>
     <input type="text" id="username" placeholder="اسم المستخدم">
     <input type="password" id="password" placeholder="كلمة المرور">
     <p>اختر نوع الإدارة:</p>
